Search Page | Accessibility Color Contrast Issue

--- a/src/components/search-results/sass/_search-results.scss
+++ b/src/components/search-results/sass/_search-results.scss
@@ -296,6 +296,7 @@
                     padding-bottom: 20px;
                     position: relative;
                     font-family: 'FSMe-Bold' !important;
+                    color:$grey-color04;
                     &:before {
                         position: absolute;
                         left: -28px;
